--- a/views/pages/components/_global-contact.html
+++ b/views/pages/components/_global-contact.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="ig-contact-us">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-12 col-md-4">
 				<div class="ig-icon-blck">
 					<span></span>
 				</div>
@@ -11,7 +11,7 @@
 					<p>Contact us at our toll free number: 0124 6173838 9910383838 </p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-12 col-md-4">
 				<div class="ig-icon-blck">
 					<span></span>
 				</div>
@@ -20,7 +20,7 @@
 					<p>Share your feedback over email</p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-12 col-md-4">
 				<div class="ig-icon-blck">
 					<span></span>
 				</div>
