--- a/views/pages/components/_global-footer.html
+++ b/views/pages/components/_global-footer.html
@@ -1,135 +1,146 @@
 <div class="container">
 	<footer class="ig-footer">
 		<div class="row">
-			<div class="col-md-3">
-				<h7>Get to know us</h7>
-				<ul class="ig-footer-site-list">
-					<li>
-						<a href="#">Investor Relations</a>
-					</li>
-					<li>
-						<a href="#">About Us</a>
-					</li>
-					<li>
-						<a href="#">Careers</a>
-					</li>
-					<li>
-						<a href="#">Board of Directors</a>
-					</li>
-					<li>
-						<a href="#">Leadership Team</a>
-					</li>
-					<li>
-						<a href="#">InterGlobe Enterprises</a>
-					</li>
-					<li>
-						<a href="#">Conditions of Carriage</a>
-					</li>
-					<li>
-						<a href="#">Awards</a>
-					</li>
-					<li>
-						<a href="#">IndiGo FCN</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-3">
-				<h7>Services</h7>
-				<ul class="ig-footer-site-list">
-					<li>
-						<a href="#">New Flights</a>
-					</li>
-					<li>
-						<a href="#">Schedule</a>
-					</li>
-					<li>
-						<a href="#">Fare Sheet</a>
-					</li>
-					<li>
-						<a href="#">IndiGo CarGo</a>
-					</li>
-					<li>
-						<a href="#">Special/Disability Assistance</a>
-					</li>
-					<li>
-						<a href="#">Medical Assistance</a>
-					</li>
-					<li>
-						<a href="#">Group Booking</a>
-					</li>
-					<li>
-						<a href="#">Disclaimer</a>
-					</li>
-					<li>
-						<a href="#">Track Your Bag</a>
-					</li>
-					<li>
-						<a href="#">Web Check-In</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-3">
-				<h7>Talk to Us</h7>
-				<ul class="ig-footer-site-list">
-					<li>
-						<a href="#">Information</a>
-					</li>
-					<li>
-						<a href="#">Contact Us</a>
-					</li>
-					<li>
-						<a href="#">FAQs</a>
-					</li>
-					<li>
-						<a href="#">International</a>
-					</li>
-					<li>
-						<a href="#">Reservation Offices</a>
-					</li>
-					<li>
-						<a href="#">Indigo Fullfilment center</a>
-					</li>
-					<li>
-						<a href="#">Advertise</a>
-					</li>
-					<li>
-						<a href="#">Feedback</a>
-					</li>
-					<li>
-						<a href="#">Site Map</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 social-links">
 				<h7>Social</h7>
-				<ul class="ig-footer-social-list clearfix">
-					<li>
-						<a href="#"></a>
-					</li>
-					<li>
-						<a href="#"></a>
-					</li>
-					<li>
-						<a href="#"></a>
-					</li>
-					<li>
-						<a href="#"></a>
-					</li>
-				</ul>
-				<h7>Download</h7>
-				<ul class="ig-footer-download-list clearfix">
-					<li>
-						<a href="#"></a>
-					</li>
-					<li>
-						<a href="#"></a>
-					</li>
-				</ul>
+				<div class="ig-footer-social-list clearfix">
+					<a href="#"></a>
+					<a href="#"></a>
+					<a href="#"></a>
+					<a href="#"></a>
+				</div>
+				<div class="d-none d-sm-block">
+					<h7>Download</h7>
+					<ul class="ig-footer-download-list clearfix">
+						<li>
+							<a href="#"></a>
+						</li>
+						<li>
+							<a href="#"></a>
+						</li>
+					</ul>
+				</div>
 			</div>
+			<div class="ig-footer-accordion" id="accordion">
+			  	<div class="col-12 col-md-3 ig-acc-sitemap">
+				    <div id="headingOne">
+				      	<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Get to know us</button>
+				    </div>
+
+				    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+				      	<ul class="ig-footer-site-list">
+							<li>
+								<a href="#">Investor Relations</a>
+							</li>
+							<li>
+								<a href="#">About Us</a>
+							</li>
+							<li>
+								<a href="#">Careers</a>
+							</li>
+							<li>
+								<a href="#">Board of Directors</a>
+							</li>
+							<li>
+								<a href="#">Leadership Team</a>
+							</li>
+							<li>
+								<a href="#">InterGlobe Enterprises</a>
+							</li>
+							<li>
+								<a href="#">Conditions of Carriage</a>
+							</li>
+							<li>
+								<a href="#">Awards</a>
+							</li>
+							<li>
+								<a href="#">IndiGo FCN</a>
+							</li>
+						</ul>
+				    </div>
+			  	</div>
+			  	<div class="col-12 col-md-3 ig-acc-sitemap">
+			    	<div id="headingTwo">
+				      	<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Services</button>
+			      	</div>
+				    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+				      	<ul class="ig-footer-site-list">
+							<li>
+								<a href="#">New Flights</a>
+							</li>
+							<li>
+								<a href="#">Schedule</a>
+							</li>
+							<li>
+								<a href="#">Fare Sheet</a>
+							</li>
+							<li>
+								<a href="#">IndiGo CarGo</a>
+							</li>
+							<li>
+								<a href="#">Special/Disability Assistance</a>
+							</li>
+							<li>
+								<a href="#">Medical Assistance</a>
+							</li>
+							<li>
+								<a href="#">Group Booking</a>
+							</li>
+							<li>
+								<a href="#">Disclaimer</a>
+							</li>
+							<li>
+								<a href="#">Track Your Bag</a>
+							</li>
+							<li>
+								<a href="#">Web Check-In</a>
+							</li>
+						</ul>
+				    </div>
+			  	</div>
+			  	<div class="col-12 col-md-3 ig-acc-sitemap">
+				    <div id="headingThree">
+				      	<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Talk to Us</button>
+				    </div>
+				    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+				      	<ul class="ig-footer-site-list">
+							<li>
+								<a href="#">Information</a>
+							</li>
+							<li>
+								<a href="#">Contact Us</a>
+							</li>
+							<li>
+								<a href="#">FAQs</a>
+							</li>
+							<li>
+								<a href="#">International</a>
+							</li>
+							<li>
+								<a href="#">Reservation Offices</a>
+							</li>
+							<li>
+								<a href="#">Indigo Fullfilment center</a>
+							</li>
+							<li>
+								<a href="#">Advertise</a>
+							</li>
+							<li>
+								<a href="#">Feedback</a>
+							</li>
+							<li>
+								<a href="#">Site Map</a>
+							</li>
+						</ul>
+				    </div>
+			  	</div>
+			</div>
+			
 			<div class="col-md-12 copyright-blck clearfix">
 				<div class="copyright-content">
 					<span></span>
-					<p>Copyright 2018 IndiGo All rights reserved.</p>
+					<p class="d-none d-sm-block">Copyright 2018 IndiGo All rights reserved.</p>
+					<p class="d-block d-sm-none">	&#9400; IndiGo, Inc.</p>
 				</div>
 				<div class="lang-price">
 					<div class="dropdown">
