--- a/views/pages/components/_homepage-6e-extras.html
+++ b/views/pages/components/_homepage-6e-extras.html
@@ -5,7 +5,7 @@
 				<h2 class="ig-common-head">6E Xtras</h2>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row sixEextrascarousel">
 			<div class="col-md-3">
 				<picture>
 					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
