--- a/views/pages/components/_homepage-indigo-benefits.html
+++ b/views/pages/components/_homepage-indigo-benefits.html
@@ -5,7 +5,7 @@
 				<h2 class="ig-common-head">IndiGo Benefits</h2>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row benefitscarousel">
 			<div class="col-md-4">
 				<picture>
 					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
