--- a/views/pages/components/_homepage-deals-offers.html
+++ b/views/pages/components/_homepage-deals-offers.html
@@ -2,7 +2,7 @@
 	<div class="ig-deals-offers">
 		<div class="row">
 			<div class="col-md-12">
-				<h2 class="ig-common-head">Accomodation Deals & Offers </h2>
+				<h2 class="ig-common-head">Accommodation Deals & Offers </h2>
 			</div>
 		</div>
 		<div class="row">
