--- a/views/pages/components/_global-alerts.html
+++ b/views/pages/components/_global-alerts.html
@@ -6,7 +6,7 @@
 					<div class="row">
 						<div class="col-md-2">
 							<span class="ig-alert-img"></span>
-							<span class="ig-alert-name">INDIGO<br>ALERTS</span>
+							<span class="ig-alert-name semi-bold">INDIGO<br>ALERTS</span>
 						</div>
 						<div class="col-md-9 ig-run-alert-carousel">
 							<div>
