--- a/views/pages/components/_popular-gateway.html
+++ b/views/pages/components/_popular-gateway.html
@@ -27,6 +27,9 @@
 	 			<h6 class="ig-common-title">Goa</h6>
 	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
 	 		</div>
+	 		<div class="ig-temp-widget">
+	 			<span>22&deg;c</span>
+	 		</div>
 	 	</div>
 
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
@@ -36,6 +39,9 @@
 	 		<div class="ig-common-desc-top">
 	 			<h6 class="ig-common-title">Goa</h6>
 	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+	 		</div>
+	 		<div class="ig-temp-widget">
+	 			<span>22&deg;c</span>
 	 		</div>
 	 	</div>
 
@@ -47,6 +53,9 @@
 	 			<h6 class="ig-common-title">Goa</h6>
 	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
 	 		</div>
+	 		<div class="ig-temp-widget">
+	 			<span>22&deg;c</span>
+	 		</div>
 	 	</div>
 
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
@@ -57,6 +66,9 @@
 	 			<h6 class="ig-common-title">Goa</h6>
 	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
 	 		</div>
+	 		<div class="ig-temp-widget">
+	 			<span>22&deg;c</span>
+	 		</div>
 	 	</div>
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
 	 		<picture>
@@ -65,6 +77,9 @@
 	 		<div class="ig-common-desc-top">
 	 			<h6 class="ig-common-title">Goa</h6>
 	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+	 		</div>
+	 		<div class="ig-temp-widget">
+	 			<span>22&deg;c</span>
 	 		</div>
 	 	</div>
 	 	<button type="button" class="d-block d-sm-none btn btn-secondary">See all (25)</button>
