--- a/fe-source/scss/components/_global-promotions.scss
+++ b/fe-source/scss/components/_global-promotions.scss
@@ -1,3 +1,4 @@
+.ig-parent-promo{
 .ig-section-promo{
 	border: 1px dashed #c6c6c6;
     border-width: 2px;
@@ -8,10 +9,23 @@
     height: 55px;
     width: 55px;
     border-radius: 50%;
+    position: absolute;
+    left: 10px;
+    top: 13px;
 }
 .ig-promotion-second{
 	color: #999;
     display: block;
     font-size: 13px;
     padding-top: 4px;
+}
+    .slick-disabled{
+        opacity:0;
+    }
+    .slick-prev, .slick-next{
+    z-index:999;
+    &:hover{
+    background:#fff;
+    }
+    }
 }
