--- a/fe-source/scss/components/_popular-gateway.scss
+++ b/fe-source/scss/components/_popular-gateway.scss
@@ -2,7 +2,7 @@
 	.dropdown{
 	    display: inline-block;
 	}
-	button{
+	button {
 		background: #fff;
 	    color: #1c87fc;
 	    border: none;
@@ -23,7 +23,8 @@
 	    }
 	}
 }
-.ig-parent-popular{
+.ig-parent-popular {
+
 	picture {
 		display: block;
 		img {
@@ -31,28 +32,62 @@
 		    height: 195px;
 		    border-radius: 4px;
 
-		    @include breakpoint(mobile){ 
+		    @include breakpoint(mobile) { 
 		    height:128px;
 		    }
 		}
 	}
-	.btn{
+	.btn {
  	width: 92%;
     margin: 0px auto;
     padding: 10px;
     color: #1c87fc;
     font-size: 17px;
-    background-color: #efeff4;
-    &:active{
+    @include breakpoint(mobile) { 
+		    padding-left:0;
+		    }
+    &:active {
      color: #1c87fc !important;
-     background-color: #efeff4 !important;
+     background-color: #fff !important;
      border-color:#fff !important;
+
     }
      &:focus{
      color: #1c87fc !important;
-     background-color: #efeff4 !important;
+     background-color: #fff;
      border-color:#fff !important;
     }
 
 	}
+	.ig-temp-widget {
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    color: #fff;
+	span{
+		&:before{
+		width:10px;
+		height:10px;
+		border:1px solid;
+		content:"";
+		display:inline-block;
+		margin-right: 5px;
+		}
+	}
+	}
+	.slick-prev, .slick-next{
+	    top: 38%;
+	    z-index:999;
+	}
+	.slick-disabled{
+		opacity:0;
+	}
+	.slick-next {
+    right: -15px;
+}
+.slick-arrow{
+	&:hover{
+	background:#fff;
+	}
+}
 }
