--- a/fe-source/scss/components/_homepage-latest.scss
+++ b/fe-source/scss/components/_homepage-latest.scss
@@ -13,9 +13,10 @@
 	}
 
 	.ig-icon-discount{
-		border:1px solid #ddd;
-		width:50px;
-		height:53px;
+
+		img{
+		width:100%;
+		}
 	}
 
 	.ig-latest-text{
