--- a/views/pages/components/_global-footer.html
+++ b/views/pages/components/_global-footer.html
@@ -13,10 +13,14 @@
 					<h7>Download</h7>
 					<ul class="ig-footer-download-list clearfix">
 						<li>
-							<a href="#"></a>
+							<a href="#">
+								<img src="/images/imgAndroid.svg">
+							</a>
 						</li>
 						<li>
-							<a href="#"></a>
+							<a href="#">
+								<img src="/images/imgApple.svg">
+							</a>
 						</li>
 					</ul>
 				</div>
