--- a/views/pages/components/_global-promotions.html
+++ b/views/pages/components/_global-promotions.html
@@ -19,7 +19,9 @@
 						</div>
 						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
-								<span class="ig-image-promotions"></span>
+								<span class="ig-promoimg-wrap">
+									<img src="/images/imgairtel.jpg">
+								</span>
 							</div>
 						</div>
 					</div>
@@ -37,7 +39,9 @@
 						</div>
 						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
-								<span class="ig-image-promotions"></span>
+								<span class="ig-promoimg-wrap">
+									<img src="/images/imgmastercard.jpg">
+								</span>
 							</div>
 						</div>
 					</div>
@@ -55,7 +59,9 @@
 						</div>
 						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
-								<span class="ig-image-promotions"></span>
+								<span class="ig-promoimg-wrap">
+									<img src="/images/imgpaytm.jpg">
+								</span>
 							</div>
 						</div>
 					</div>
@@ -73,7 +79,9 @@
 						</div>
 						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
-								<span class="ig-image-promotions"></span>
+								<span class="ig-promoimg-wrap">
+									<img src="/images/imgairtel.jpg">
+								</span>
 							</div>
 						</div>
 					</div>
