--- a/views/pages/components/_homepage-6e-extras.html
+++ b/views/pages/components/_homepage-6e-extras.html
@@ -8,7 +8,7 @@
 		<div class="row sixEextrascarousel">
 			<div class="col-md-3">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgplanb.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">PLAN B</h6>
@@ -17,7 +17,7 @@
 			</div>
 			<div class="col-md-3">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgormore.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">7 or more</h6>
@@ -26,7 +26,7 @@
 			</div>
 			<div class="col-md-3">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgfastforward.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">Fast Forward</h6>
@@ -35,7 +35,7 @@
 			</div>
 			<div class="col-md-3">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imguaevisa.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">UAE Visa</h6>
