--- a/views/pages/components/_homepage-deals-offers.html
+++ b/views/pages/components/_homepage-deals-offers.html
@@ -8,7 +8,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgbookingaccommodation.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">Booking.com</h6>
@@ -17,7 +17,7 @@
 			</div>
 			<div class="col-md-6">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgOyoaommodation.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">OYO</h6>
