--- a/fe-source/scss/components/_global-alerts.scss
+++ b/fe-source/scss/components/_global-alerts.scss
@@ -3,12 +3,15 @@
      padding: 11px;
 
 	.ig-alert-img {
-	    width: 50px;
+		 width: 60px;
 	    height: 40px;
-	    border: 1px solid #ddd;
 	    margin-right: 10px;
 	    display: inline-block;
 	    float: left;
+	    margin-top: -5px;
+   		img{
+   		width:100%;
+   		}
 	}
 	.ig-alert-name {
 		font-size: 18px;
