--- a/fe-source/scss/components/_global-promotions.scss
+++ b/fe-source/scss/components/_global-promotions.scss
@@ -5,13 +5,20 @@
     padding: 26px 15px;
 }
 .ig-promotions-img{
-    border: 1px solid #ddd;
     height: 55px;
     width: 55px;
     border-radius: 50%;
-    position: absolute;
-    left: 10px;
-    top: 13px;
+    border: 1px solid #ddd;
+
+    .ig-promoimg-wrap{
+        position: absolute;
+        top: 20px;
+        left: 13px;
+        img {
+        height:auto;
+        width:88%;
+        }
+    }
 }
 .ig-promotion-second{
 	color: #999;
