--- a/fe-source/scss/components/_popular-gateway.scss
+++ b/fe-source/scss/components/_popular-gateway.scss
@@ -29,12 +29,9 @@
 		display: block;
 		img {
 			width: 100%;
-		    height: 195px;
+		    height: auto;
 		    border-radius: 4px;
-
-		    @include breakpoint(mobile) { 
-		    height:128px;
-		    }
+		   
 		}
 	}
 	.btn {
@@ -43,6 +40,7 @@
     padding: 10px;
     color: #1c87fc;
     font-size: 17px;
+    padding:0;
     @include breakpoint(mobile) { 
 		    padding-left:0;
 		    }
