--- a/views/pages/components/_global-alerts.html
+++ b/views/pages/components/_global-alerts.html
@@ -5,7 +5,9 @@
 				<div class="ig-wrap-alert">
 					<div class="row">
 						<div class="col-md-2">
-							<span class="ig-alert-img"></span>
+							<span class="ig-alert-img">
+								<img src="/images/indigoalerts.jpg">
+							</span>
 							<span class="ig-alert-name semi-bold">INDIGO<br>ALERTS</span>
 						</div>
 						<div class="col-md-9 ig-run-alert-carousel">
