--- a/views/pages/components/_homepage-indigo-benefits.html
+++ b/views/pages/components/_homepage-indigo-benefits.html
@@ -8,7 +8,7 @@
 		<div class="row benefitscarousel">
 			<div class="col-md-4">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgfoodmenu.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">Food Menu</h6>
@@ -17,7 +17,7 @@
 			</div>
 			<div class="col-md-4">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgroutemap.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">Route Map</h6>
@@ -26,7 +26,7 @@
 			</div>
 			<div class="col-md-4">
 				<picture>
-					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
+					<img src="/images/imgspecialdisability.jpg">
 				</picture>
 				<div class="ig-common-desc-top">
 					<h6 class="ig-common-title">Special Disabilty Assistance</h6>
