--- a/views/pages/components/_homepage-latest.html
+++ b/views/pages/components/_homepage-latest.html
@@ -14,7 +14,7 @@
 					<div class="row">
 						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
-								
+								<img src="/images/iconstudentdiscount.svg">
 							</div>
 						</div>
 						<div class="col-md-9 col-9">
@@ -30,7 +30,7 @@
 					<div class="row">
 						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
-								
+								<img src="/images/logo.svg">
 							</div>
 						</div>
 						<div class="col-md-9 col-9">
@@ -46,7 +46,7 @@
 					<div class="row">
 						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
-								
+								<img src="/images/group.svg">
 							</div>
 						</div>
 						<div class="col-md-9 col-9">
@@ -62,7 +62,7 @@
 					<div class="row">
 						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
-								
+								<img src="/images/icongiftvoucher.svg">
 							</div>
 						</div>
 						<div class="col-md-9 col-9">
