--- a/fe-source/scss/components/_homepage-latest.scss
+++ b/fe-source/scss/components/_homepage-latest.scss
@@ -1,3 +1,10 @@
+.ig-parent-latest {
+	a {
+		display: block;
+		text-decoration: none;
+	}
+}
+
 .ig-inner-section{
 	
 	background-image: linear-gradient(to right, #7491ff, #0ac3fa 48%, #4addea);
