--- a/views/pages/components/_global-promotions.html
+++ b/views/pages/components/_global-promotions.html
@@ -9,12 +9,14 @@
 		</div>
 		<div class="row ig-promotions-carousel">
 			<div class="col-md-4 ig-carosuel-item">
-				<div class="ig-section-promo">
-					<div class="row">
-						<div class="col-md-9 col-9">
-							<div class="ig-promotions-left">
-								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
-								<span class="ig-promotion-second">Expires 31/06/2018</span>
+				<a href="#">
+					<div class="ig-section-promo">
+						<div class="row">
+							<div class="col-md-9 col-9">
+								<div class="ig-promotions-left">
+									<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
+									<span class="ig-promotion-second">Expires 31/06/2018</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-3">
@@ -25,16 +27,18 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-4 ig-carosuel-item">
-				<div class="ig-section-promo">
-					<div class="row">
-						<div class="col-md-9 col-9">
-							<div class="ig-promotions-left">
-								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
-								<span class="ig-promotion-second">Expires 31/06/2018</span>
+				<a href="#">
+					<div class="ig-section-promo">
+						<div class="row">
+							<div class="col-md-9 col-9">
+								<div class="ig-promotions-left">
+									<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
+									<span class="ig-promotion-second">Expires 31/06/2018</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-3">
@@ -45,16 +49,18 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-4 ig-carosuel-item">
-				<div class="ig-section-promo">
-					<div class="row">
-						<div class="col-md-9 col-9">
-							<div class="ig-promotions-left">
-								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
-								<span class="ig-promotion-second">Expires 31/06/2018</span>
+				<a href="#">
+					<div class="ig-section-promo">
+						<div class="row">
+							<div class="col-md-9 col-9">
+								<div class="ig-promotions-left">
+									<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
+									<span class="ig-promotion-second">Expires 31/06/2018</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-3">
@@ -65,16 +71,18 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-4 ig-carosuel-item">
-				<div class="ig-section-promo">
-					<div class="row">
-						<div class="col-md-9 col-9">
-							<div class="ig-promotions-left">
-								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
-								<span class="ig-promotion-second">Expires 31/06/2018</span>
+				<a href="#">
+					<div class="ig-section-promo">
+						<div class="row">
+							<div class="col-md-9 col-9">
+								<div class="ig-promotions-left">
+									<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
+									<span class="ig-promotion-second">Expires 31/06/2018</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-3">
@@ -85,7 +93,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 		</div>
