--- a/views/pages/components/_homepage-6e-extras.html
+++ b/views/pages/components/_homepage-6e-extras.html
@@ -7,40 +7,48 @@
 		</div>
 		<div class="row sixEextrascarousel">
 			<div class="col-md-3">
-				<picture>
-					<img src="/images/imgplanb.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">PLAN B</h6>
-					<p class="ig-common-subtitle">For Change/ Cancel/ Refund of disrupted flights</p>
-			   </div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgplanb.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">PLAN B</h6>
+						<p class="ig-common-subtitle">For Change/ Cancel/ Refund of disrupted flights</p>
+				   </div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<picture>
-					<img src="/images/imgormore.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">7 or more</h6>
-					<p class="ig-common-subtitle">Get attractive deals on group bookings. know more</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgormore.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">7 or more</h6>
+						<p class="ig-common-subtitle">Get attractive deals on group bookings. know more</p>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<picture>
-					<img src="/images/imgfastforward.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">Fast Forward</h6>
-					<p class="ig-common-subtitle">Check-in first. Get your baggage before anyone else with our Fast Forward service at just ₹400</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgfastforward.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">Fast Forward</h6>
+						<p class="ig-common-subtitle">Check-in first. Get your baggage before anyone else with our Fast Forward service at just ₹400</p>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<picture>
-					<img src="/images/imguaevisa.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">UAE Visa</h6>
-					<p class="ig-common-subtitle">Get your UAE visa without any paper work and hassle for just ₹6199</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imguaevisa.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">UAE Visa</h6>
+						<p class="ig-common-subtitle">Get your UAE visa without any paper work and hassle for just ₹6199</p>
+					</div>
+				</a>
 			</div>
 		</div>	
 	</div>
