--- a/views/pages/components/_homepage-deals-offers.html
+++ b/views/pages/components/_homepage-deals-offers.html
@@ -7,22 +7,26 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<picture>
-					<img src="/images/imgbookingaccommodation.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">Booking.com</h6>
-					<p class="ig-common-subtitle">Book now and pay later with Free Cancellation on most rooms!</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgbookingaccommodation.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">Booking.com</h6>
+						<p class="ig-common-subtitle">Book now and pay later with Free Cancellation on most rooms!</p>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-6">
-				<picture>
-					<img src="/images/imgOyoaommodation.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">OYO</h6>
-					<p class="ig-common-subtitle">With over 8500+ hotels and 70,000 rooms across 230+ cities, OYO creates beautiful living spaces & hassle-free experiences.</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgOyoaommodation.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">OYO</h6>
+						<p class="ig-common-subtitle">With over 8500+ hotels and 70,000 rooms across 230+ cities, OYO creates beautiful living spaces & hassle-free experiences.</p>
+					</div>
+				</a>
 			</div>
 		</div>
 	</div>
