--- a/views/pages/components/_homepage-latest.html
+++ b/views/pages/components/_homepage-latest.html
@@ -10,67 +10,75 @@
 		<div class="row runlatestcarousel">
 		
 			<div class="col-md-3">
-				<div class="ig-inner-section">
-					<div class="row">
-						<div class="col-3 float-left">
-							<div class="ig-icon-discount">
-								<img src="/images/iconstudentdiscount.svg">
+				<a href="#">
+					<div class="ig-inner-section">
+						<div class="row">
+							<div class="col-3 float-left">
+								<div class="ig-icon-discount">
+									<img src="/images/iconstudentdiscount.svg">
+								</div>
+							</div>
+							<div class="col-md-9 col-9">
+								<span class="ig-latest-text">Student Discount</span>
+								<span class="ig-latest-text-second">6% off and 10KG extra baggae allowance</span>
 							</div>
 						</div>
-						<div class="col-md-9 col-9">
-							<span class="ig-latest-text">Student Discount</span>
-							<span class="ig-latest-text-second">6% off and 10KG extra baggae allowance</span>
-						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-3">
-				<div class="ig-inner-section ig-sixE-text">
-					<div class="row">
-						<div class="col-3 float-left">
-							<div class="ig-icon-discount">
-								<img src="/images/logo.svg">
+				<a href="#">
+					<div class="ig-inner-section ig-sixE-text">
+						<div class="row">
+							<div class="col-3 float-left">
+								<div class="ig-icon-discount">
+									<img src="/images/logo.svg">
+								</div>
+							</div>
+							<div class="col-md-9 col-9">
+								<span class="ig-latest-text">6E Special</span>
+								<span class="ig-latest-text-second">Buy and get upto 4x benifits</span>
 							</div>
 						</div>
-						<div class="col-md-9 col-9">
-							<span class="ig-latest-text">6E Special</span>
-							<span class="ig-latest-text-second">Buy and get upto 4x benifits</span>
-						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-3">
-				<div class="ig-inner-section ig-sixSme-Text">
-					<div class="row">
-						<div class="col-3 float-left">
-							<div class="ig-icon-discount">
-								<img src="/images/group.svg">
+				<a href="#">
+					<div class="ig-inner-section ig-sixSme-Text">
+						<div class="row">
+							<div class="col-3 float-left">
+								<div class="ig-icon-discount">
+									<img src="/images/group.svg">
+								</div>
+							</div>
+							<div class="col-md-9 col-9">
+								<span class="ig-latest-text">6E SME</span>
+								<span class="ig-latest-text-second">Enjoy unlimited changes.Lower cancellation fees and a free snack</span>
 							</div>
 						</div>
-						<div class="col-md-9 col-9">
-							<span class="ig-latest-text">6E SME</span>
-							<span class="ig-latest-text-second">Enjoy unlimited changes.Lower cancellation fees and a free snack</span>
-						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 			<div class="col-md-3">
-				<div class="ig-inner-section ig-gift-text">
-					<div class="row">
-						<div class="col-3 float-left">
-							<div class="ig-icon-discount">
-								<img src="/images/icongiftvoucher.svg">
+				<a href="#">
+					<div class="ig-inner-section ig-gift-text">
+						<div class="row">
+							<div class="col-3 float-left">
+								<div class="ig-icon-discount">
+									<img src="/images/icongiftvoucher.svg">
+								</div>
+							</div>
+							<div class="col-md-9 col-9">
+								<span class="ig-latest-text">Gift</span>
+								<span class="ig-latest-text-second">6% off and 10KG extra baggae allowance</span>
 							</div>
 						</div>
-						<div class="col-md-9 col-9">
-							<span class="ig-latest-text">Gift</span>
-							<span class="ig-latest-text-second">6% off and 10KG extra baggae allowance</span>
-						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 
 
