--- a/views/pages/components/_popular-gateway.html
+++ b/views/pages/components/_popular-gateway.html
@@ -20,67 +20,77 @@
 	 </div>
 	 <div class="row ig-popular-carousel">
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
-	 		<picture>
-	 			<img src="/images/populargoa.jpg"/>
-	 		</picture>
-	 		<div class="ig-common-desc-top">
-	 			<h6 class="ig-common-title">Goa</h6>
-	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
-	 		</div>
-	 		<div class="ig-temp-widget">
-	 			<span>22&deg;c</span>
-	 		</div>
+	 		<a href="#">
+		 		<picture>
+		 			<img src="/images/populargoa.jpg"/>
+		 		</picture>
+		 		<div class="ig-common-desc-top">
+		 			<h6 class="ig-common-title">Goa</h6>
+		 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+		 		</div>
+		 		<div class="ig-temp-widget">
+		 			<span>22&deg;c</span>
+		 		</div>
+	 		</a>
 	 	</div>
 
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
-	 		<picture>
-	 			<img src="/images/popularmumbai.jpg"/>
-	 		</picture>
-	 		<div class="ig-common-desc-top">
-	 			<h6 class="ig-common-title">Goa</h6>
-	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
-	 		</div>
-	 		<div class="ig-temp-widget">
-	 			<span>22&deg;c</span>
-	 		</div>
+	 		<a href="#">
+		 		<picture>
+		 			<img src="/images/popularmumbai.jpg"/>
+		 		</picture>
+		 		<div class="ig-common-desc-top">
+		 			<h6 class="ig-common-title">Goa</h6>
+		 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+		 		</div>
+		 		<div class="ig-temp-widget">
+		 			<span>22&deg;c</span>
+		 		</div>
+		 	</a>
 	 	</div>
 
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
-	 		<picture>
-	 			<img src="/images/popularblr.jpg"/>
-	 		</picture>
-	 		<div class="ig-common-desc-top">
-	 			<h6 class="ig-common-title">Goa</h6>
-	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
-	 		</div>
-	 		<div class="ig-temp-widget">
-	 			<span>22&deg;c</span>
-	 		</div>
+	 		<a href="#">
+		 		<picture>
+		 			<img src="/images/popularblr.jpg"/>
+		 		</picture>
+		 		<div class="ig-common-desc-top">
+		 			<h6 class="ig-common-title">Goa</h6>
+		 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+		 		</div>
+		 		<div class="ig-temp-widget">
+		 			<span>22&deg;c</span>
+		 		</div>
+		 	</a>
 	 	</div>
 
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
-	 		<picture>
-	 			<img src="/images/popularhyd.jpg"/>
-	 		</picture>
-	 		<div class="ig-common-desc-top">
-	 			<h6 class="ig-common-title">Goa</h6>
-	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
-	 		</div>
-	 		<div class="ig-temp-widget">
-	 			<span>22&deg;c</span>
-	 		</div>
+	 		<a href="#">
+		 		<picture>
+		 			<img src="/images/popularhyd.jpg"/>
+		 		</picture>
+		 		<div class="ig-common-desc-top">
+		 			<h6 class="ig-common-title">Goa</h6>
+		 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+		 		</div>
+		 		<div class="ig-temp-widget">
+		 			<span>22&deg;c</span>
+		 		</div>
+		 	</a>
 	 	</div>
 	 	<div class="col-6 col-md-3 ig-carosuel-item">
-	 		<picture>
-	 			<img src="/images/popularhyd.jpg"/>
-	 		</picture>
-	 		<div class="ig-common-desc-top">
-	 			<h6 class="ig-common-title">Goa</h6>
-	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
-	 		</div>
-	 		<div class="ig-temp-widget">
-	 			<span>22&deg;c</span>
-	 		</div>
+	 		<a href="#">
+		 		<picture>
+		 			<img src="/images/popularhyd.jpg"/>
+		 		</picture>
+		 		<div class="ig-common-desc-top">
+		 			<h6 class="ig-common-title">Goa</h6>
+		 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+		 		</div>
+		 		<div class="ig-temp-widget">
+		 			<span>22&deg;c</span>
+		 		</div>
+		 	</a>
 	 	</div>
 	 	<button type="button" class="d-block d-sm-none btn btn-secondary">See all (25)</button>
 	 </div>
