--- a/views/pages/components/_homepage-indigo-benefits.html
+++ b/views/pages/components/_homepage-indigo-benefits.html
@@ -1,37 +1,45 @@
 <div class="container">
 	<div class="ig-indigo-benefits ig-common-bottom">
-		<div class="row ">
+		<div class="row">
 			<div class="col-md-12">
 				<h2 class="ig-common-head">IndiGo Benefits</h2>
 			</div>
 		</div>
 		<div class="row benefitscarousel">
 			<div class="col-md-4">
-				<picture>
-					<img src="/images/imgfoodmenu.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">Food Menu</h6>
-					<p class="ig-common-subtitle">Check out our In-Flight food menu</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgfoodmenu.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">Food Menu</h6>
+						<p class="ig-common-subtitle">Check out our In-Flight food menu</p>
+					</div>
+				</a>
 			</div>
+			
 			<div class="col-md-4">
-				<picture>
-					<img src="/images/imgroutemap.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">Route Map</h6>
-					<p class="ig-common-subtitle">Check flights route map - indigo airlines</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgroutemap.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">Route Map</h6>
+						<p class="ig-common-subtitle">Check flights route map - indigo airlines</p>
+					</div>
+				</a>
 			</div>
+			
 			<div class="col-md-4">
-				<picture>
-					<img src="/images/imgspecialdisability.jpg">
-				</picture>
-				<div class="ig-common-desc-top">
-					<h6 class="ig-common-title">Special Disabilty Assistance</h6>
-					<p class="ig-common-subtitle">Special assistance for Infants, minor, disabled, pregnant women and passengers with disorders</p>
-				</div>
+				<a href="#">
+					<picture>
+						<img src="/images/imgspecialdisability.jpg">
+					</picture>
+					<div class="ig-common-desc-top">
+						<h6 class="ig-common-title">Special Disabilty Assistance</h6>
+						<p class="ig-common-subtitle">Special assistance for Infants, minor, disabled, pregnant women and passengers with disorders</p>
+					</div>
+				</a>
 			</div>	
 		</div>
 	</div>
