--- a/views/pages/homepage.html
+++ b/views/pages/homepage.html
@@ -81,6 +81,25 @@
             <% include components/_global-footer.html %>
 
         </div>
+
+        
+
+    </div>
+
+
+    <div class="container" style="border:1px solid #ddd;">
+        <div class="row">
+            <% include components/_global-header-srp.html %>
+        </div>
+
+        <div class="row">
+            <% include components/_global-journeydetails-srp.html %>
+        </div>
+
+        <div class="row">
+            <% include components/_global-srp.html %>
+        </div>
+
     </div>
    
 </body>
